# order-ocr

./: .env  .gitignore  app.py  db_utils.py  main.py  ocr_utils.py  pyproject.toml  requirements.txt  style.css
pages/: View_Data.py
prisma/: schema.prisma
web/: package-lock.json  package.json
web/prisma/: schema.prisma
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/ocr/: route.ts
web/src/app/api/work-orders/: route.ts
web/src/app/api/work-orders/[id]/: route.ts
web/src/app/api/work-orders/export/: route.ts
web/src/app/work-orders/: page.tsx
web/src/components/: FileUploadZone.module.css  FileUploadZone.tsx  LoadingSpinner.module.css  LoadingSpinner.tsx  MetricCard.module.css  MetricCard.tsx  Modal.module.css  Modal.tsx  Pagination.module.css  Pagination.tsx  Sidebar.module.css  Sidebar.tsx  ThemeToggle.tsx  Toast.module.css  Toast.tsx  WorkOrderModal.module.css  WorkOrderModal.tsx
web/src/context/: ThemeContext.tsx
web/src/lib/: api.ts
web/src/types/: index.ts
